# vala-libhandy-template

./: meson.build  org.dbeley.libhandy-template.json
data/: meson.build  org.dbeley.libhandy-template.appdata.xml.in  org.dbeley.libhandy-template.desktop.in  org.dbeley.libhandy-template.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  vala_libhandy_template.gresource.xml  window.ui  window.vala
